--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -4,7 +4,7 @@
 		"json": 2
 	},
 	"project": {
-		"name": "Comp V1-5",
+		"name": "actualRightSide",
 		"description": "",
 		"creationDate": "11/1/2024, 3:23:23 PM",
 		"platform": "V5",
